tests/ui-msrv/transmute-ref-dst-not-nocell.stderr
error[E0277]: the trait bound `Dst: NoCell` is not satisfied
  --> tests/ui-msrv/transmute-ref-dst-not-nocell.rs:22:31
   |
22 | const DST_NOT_NO_CELL: &Dst = transmute_ref!(&AU16(0));
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `NoCell` is not implemented for `Dst`
   |
note: required by a bound in `AssertDstIsNoCell`
  --> tests/ui-msrv/transmute-ref-dst-not-nocell.rs:22:31
   |
22 | const DST_NOT_NO_CELL: &Dst = transmute_ref!(&AU16(0));
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsNoCell`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
